# obs-studio

./: .gitignore  README.adept
adept/: .gitignore  build_mac.sh  fix-libs.sh
libobs/: obs-cocoa.m  obs-internal.h  obs-module.c  obs-source.c  obs-source.h  obs.c  obs.h
libobs-d3d11/: d3d11-duplicator.cpp
libobs/graphics/: graphics.h
libobs/util/: base.c  platform-cocoa.m  platform-windows.c  platform.h
obs-mac-virtualcam/: CMakeLists.txt
obs-mac-virtualcam/src/dal-plugin/: Defines.generated.h  Device.mm  Info.plist  PlugIn.mm  Stream.mm  TestCard.mm
plugins/: CMakeLists.txt
plugins/mac-avcapture/: CMakeLists.txt  av-capture.mm
plugins/mac-capture/: CMakeLists.txt  mac-audio.c  mac-display-capture.m
plugins/mac-virtual-cam/: CMakeLists.txt  plugin-main.mm
plugins/obs-cli/: CMakeLists.txt  obs-cli.c
plugins/obs-ffmpeg/: obs-ffmpeg-mux.c
plugins/obs-ffmpeg/ffmpeg-mux/: ffmpeg-mux.c
plugins/win-capture/: CMakeLists.txt  duplicator-monitor-capture.c
plugins/win-dshow/: CMakeLists.txt  win-dshow.cpp
